# Smart-Gateway-Design

./: .gitignore  CMakeLists.txt  README.md
base64/: CMakeLists.txt
base64/include/: base64.h
base64/src/: base64.c
config/: smart_getway_config.json  smart_getway_log.conf
core/: CMakeLists.txt  smart_getway.c  smart_getway.h
core/include/: smart_getway.h
core/src/: smart_getway.c
forward/: CMakeLists.txt
forward/include/: smart_getway_forward.h
forward/src/: smart_getway_forward.cpp
init/: CMakeLists.txt
init/include/: smart_getway_init.h
init/src/: smart_getway_init.c
log/: CMakeLists.txt
log/include/: smart_getway_log.h
log/src/: smart_getway_log.c
merge/: CMakeLists.txt
merge/include/: smart_getway_merge.h
merge/src/: smart_getway_merge.c
net/: CMakeLists.txt
net/include/: smart_getway_net.h
net/src/: smart_getway_net.cpp
parse/: CMakeLists.txt
parse/include/: smart_getway_parse.h
parse/src/: smart_getway_parse.c
release_how_to/: make_smart_getway.sh  update_smart_getway.sh
serial_task/: CMakeLists.txt
serial_task/include/: smart_getway_serial_task.h
serial_task/src/: smart_getway_serial_task.c
struct2json/: CMakeLists.txt
usb_task/: CMakeLists.txt
usb_task/include/: smart_getway_usb_cam.h
usb_task/src/: smart_getway_usb_cam.cpp
validation/: CMakeLists.txt
validation/include/: smart_getway_validation.h
validation/src/: smart_getway_validation.c
wifi_task/: CMakeLists.txt
wifi_task/include/: smart_getway_wifi_task.h
wifi_task/src/: smart_getway_wifi_task.c
